fixed formatting on mobile devices

--- a/css/templatemo-topic-listing.css
+++ b/css/templatemo-topic-listing.css
@@ -574,7 +574,7 @@ strong {
 
 .custom-block-overlay {
   height: 100%;
-  min-height: 400px;
+  min-height: 500px;
   padding: 0;
 }
 
